add the weather forecast app project

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -67,7 +67,12 @@
           <p class="description">Survey form</p>
           <a class="link" href="https://github.com/OlgaGorokhovskaia/portfolio/tree/main/surveyForm" target="_blank"></a>
         </li>
-      </ul>
+        <li class="project-tile">
+            <img class="preview" src="https://github.com/OlgaGorokhovskaia/gorokhovskaia-olga-otus/raw/master/reactJS/homework9/weather-forecast-app/public/screenshot.jpg" alt="screenshot-project-5"/>
+            <p class="description">Weather forecast app</p>
+            <a class="link" href="https://github.com/OlgaGorokhovskaia/gorokhovskaia-olga-otus/tree/master/reactJS/homework9/weather-forecast-app" target="_blank"></a>
+          </li>
+        </ul>
     </section>
     <section id="contacts">
       <h2>Get in touch with me</h2>
