--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -68,7 +68,7 @@
           <a class="link" href="https://github.com/OlgaGorokhovskaia/portfolio/tree/main/surveyForm" target="_blank"></a>
         </li>
         <li class="project-tile">
-            <img class="preview" src="https://github.com/OlgaGorokhovskaia/gorokhovskaia-olga-otus/raw/master/reactJS/homework9/weather-forecast-app/public/screenshot.jpg" alt="screenshot-project-5"/>
+            <img class="preview" src="https://github.com/OlgaGorokhovskaia/gorokhovskaia-olga-otus/raw/master/reactJS/homework9/weather-forecast-app/public/screenshot-1.png" alt="screenshot-project-5"/>
             <p class="description">Weather forecast app</p>
             <a class="link" href="https://github.com/OlgaGorokhovskaia/gorokhovskaia-olga-otus/tree/master/reactJS/homework9/weather-forecast-app" target="_blank"></a>
           </li>
